# my-beancount-scripts

./: .editorconfig  .gitignore  Dockerfile  fetch_prices.py  fund.py  import.py  jd.user.js  pyproject.toml  readme.md  requirements.txt
modules/: accounts.py  bean_modifier.py  refund_link.py
modules/imports/: __init__.py  abc_credit.py  alipay.py  alipay_prove.py  base.py  ccb_credit.py  ccb_debit.py  citic_credit.py  cmb_credit.py  cmb_pdf_credit.py  cmbc_credit.py  deduplicate.py  icbc_credit.py  icbc_debit.py  utils.py  wechat.py  yuebao.py
modules/price_sources/: 10jqka.py  10jqka_fund.py  boc.py  chinamoney.py  coinmarketcap.py  investing.py  sge.py
